# python-project-template

./: README.rst  pylintrc  requirements.txt  setup.cfg  setup.py
dev/: bootstrap_project.sh  install_and_configure_pyenv.sh  install_pyenv_for_centos.sh  install_pyenv_for_mac.sh  install_pyenv_for_ubuntu.sh  requirements.txt
dev/sphinxtemplates/: changelog.rst  conf.py_t  master_doc.rst_t
