#This file is a setuptools style setup.cfg...not pbr.
#https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = PROJECT
author = PROJECTAUTHOR
author_email = RabidCicada+bg_framework@gmail.com
description =
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = PROJECTURL
project_urls =
#    Bug Tracker = https://bugs.launchpad.net/pbr/
    Documentation = PROJECTDOCURL
    Source Code = PROJECTGITURL
license = Apache-2
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python 3
keywords =
    setup
    distutils

[options]
zip_safe = True
package_dir =
  '' = src/
packages = PROJECT
